--- a/Rock-Paper-Scissors.html
+++ b/Rock-Paper-Scissors.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <script src="Rock-Paper-Scissors.js"></script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
 </body>
 </html>
