--- a/Rock-Paper-Scissors.html
+++ b/Rock-Paper-Scissors.html
@@ -6,9 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Rock-Paper-Scissors.js"></script>
+    <div id="results">
+        <ol id="list"></ol>
+        <p id="score"></p>
+        <p id="winner"></p>
+    </div>
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    <button id="clear" style="margin-left:40px;">Clear</button>
+    <script src="Rock-Paper-Scissors.js"></script>
 </body>
 </html>
